package clase_11.simulacro_segundo_parcial.ejercicio1;

public enum FormatoCarga {
    SIMPLE,
    COMPUESTO
}
