package clase_11.simulacro_segundo_parcial.ejercicio1;

public interface iPaquete {
    double getPeso();
    double getCosto();
}
